--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
-<main class="colstack account">
+<div class="colstack account">
 	{{template "account-menu.html" . }}
-	<div class="colstack_right">
+	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
 			<div class="rowitem"><h1>Emails</h1></div>
 		</div>
@@ -17,6 +17,6 @@
 			</div>
 			{{end}}
 		</div>
-	</div>
-</main>
+	</main>
+</div>
 {{template "footer.html" . }}
