--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>{{.Title}} | {{.Header.Site.Name}}</title>
-		<link href="/static/{{.Header.ThemeName}}/main.css" rel="stylesheet" type="text/css">
+		<link href="/static/{{.Header.Theme.Name}}/main.css" rel="stylesheet" type="text/css">
 		{{range .Header.Stylesheets}}
 		<link href="/static/{{.}}" rel="stylesheet" type="text/css">
 		{{end}}
