--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -1,4 +1,5 @@
 {{template "header.html" . }}
+<div class="colstack">
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/logs/mod/">Logs</a></div>
@@ -25,4 +26,5 @@
 		{{end}}
 	</div>
 </main>
+</div>
 {{template "footer.html" . }}
