--- a/templates/panel-debug.html
+++ b/templates/panel-debug.html
@@ -1,4 +1,5 @@
 {{template "header.html" . }}
+<div class="colstack">
 {{template "panel-menu.html" . }}
 <main id="panel_dashboard_right" class="colstack_right">
 	<div class="colstack_item colstack_head">
@@ -14,4 +15,5 @@
 		<div class="grid_item grid_stat">{{.DBAdapter}}</div>
 	</div>
 </main>
+</div>
 {{template "footer.html" . }}
