--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+
+<div class="colstack">
 {{template "panel-menu.html" . }}
 <script>var form_vars = {
 	'forum_active': ['Hide','Show'],
@@ -72,4 +74,5 @@
 	</div>
 </main>
 
+</div>
 {{template "footer.html" . }}
