--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<div class="colstack">
+
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
@@ -56,4 +58,6 @@
 		{{end}}
 	</div>
 </main>
+
+</div>
 {{template "footer.html" . }}
