--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 
-<div id="profile_container">
+<div id="profile_container" class="colstack">
 
 <div id="profile_left_lane" class="colstack_left">
 	<!--<header class="colstack_item colstack_head rowhead">
