--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
-<main class="colstack account">
+<div class="colstack account">
 	{{template "account-menu.html" . }}
-	<div class="colstack_right">
+	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
 			<div class="rowitem"><h1>Edit Avatar</h1></div>
 		</div>
@@ -10,7 +10,7 @@
 			<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
 		</div>
 		{{end}}
-		<div class="colstack_item form_item">
+		<div class="colstack_item the_form">
 			<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>Upload Avatar</a></div>
@@ -21,6 +21,6 @@
 				</div>
 			</form>
 		</div>
-	</div>
-</main>
+	</main>
+</div>
 {{template "footer.html" . }}
