--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -1,11 +1,11 @@
 {{template "header.html" . }}
-<main class="colstack account">
+<div class="colstack account">
 	{{template "account-menu.html" . }}
-	<div class="colstack_right">
+	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
 			<div class="rowitem"><h1>Edit Username</h1></div>
 		</div>
-		<div class="colstack_item form_item">
+		<div class="colstack_item the_form">
 			<form action="/user/edit/username/submit/" method="post">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>Current Username</a></div>
@@ -20,6 +20,6 @@
 				</div>
 			</form>
 		</div>
-	</div>
-</main>
+	</main>
+</div>
 {{template "footer.html" . }}
