--- a/templates/panel-backups.html
+++ b/templates/panel-backups.html
@@ -1,4 +1,5 @@
 {{template "header.html" . }}
+<div class="colstack">
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
@@ -17,4 +18,5 @@
 		{{end}}
 	</div>
 </main>
+</div>
 {{template "footer.html" . }}
