--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,14 +1,16 @@
 {{template "header.html" . }}
+<div class="colstack">
 {{template "panel-menu.html" . }}
-<main id="panel_dashboard_right" class="colstack_right">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Dashboard</a></div>
-	</div>
-	<div id="panel_dashboard" class="colstack_grid">
+	<main id="panel_dashboard_right" class="colstack_right">
+		<div class="colstack_item colstack_head">
+			<div class="rowitem"><a>Dashboard</a></div>
+		</div>
+		<div id="panel_dashboard" class="colstack_grid">
 {{range .GridItems}}
-		<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
-		{{if .Background}}background-color: {{.Background}};{{end}}">{{.Body}}</div>
+			<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
+		{{if .Background}}background-color: {{.Background}};{{end}}"><span>{{.Body}}</span></div>
 {{end}}
-	</div>
-</main>
+		</div>
+	</main>
+</div>
 {{template "footer.html" . }}
