--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+
+<div class="colstack">
 {{template "panel-menu.html" . }}
 <script>
 var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
@@ -63,4 +65,5 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 		{{end}}
 	</div>
 </main>
+</div>
 {{template "footer.html" . }}
