--- a/templates/panel-group-edit-perms.html
+++ b/templates/panel-group-edit-perms.html
@@ -1,4 +1,5 @@
 {{template "header.html" . }}
+<div class="colstack">
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">Group Editor</a></div>
@@ -60,4 +61,5 @@
 	</div>
 	</form>
 </main>
+</div>
 {{template "footer.html" . }}
