--- a/templates/panel-group-edit.html
+++ b/templates/panel-group-edit.html
@@ -1,4 +1,5 @@
 {{template "header.html" . }}
+<div class="colstack">
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">Group Editor</a></div>
@@ -43,4 +44,5 @@
 		</form>
 	</div>
 </main>
+</div>
 {{template "footer.html" . }}
