--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -1,6 +1,7 @@
 {{template "header.html" . }}
-{{template "panel-menu.html" . }}
+<div class="colstack">
 
+{{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>Groups</h1></div>
@@ -57,4 +58,6 @@
 		</form>
 	</div>
 </main>
+
+</div>
 {{template "footer.html" . }}
