--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<div class="colstack">
+
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
@@ -21,4 +23,6 @@
 		{{end}}
 	</div>
 </main>
+
+</div>
 {{template "footer.html" . }}
