--- a/templates/panel-setting.html
+++ b/templates/panel-setting.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<div class="colstack">
+
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
@@ -34,4 +36,6 @@
 		</form>
 	</div>
 </main>
+
+</div>
 {{template "footer.html" . }}
