--- a/templates/panel-users.html
+++ b/templates/panel-users.html
@@ -1,6 +1,7 @@
 {{template "header.html" . }}
-{{template "panel-menu.html" . }}
+<div class="colstack">
 
+{{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>Users</h1></div>
@@ -29,4 +30,6 @@
 	</div>
 	{{end}}
 </main>
+
+</div>
 {{template "footer.html" . }}
