--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -31,7 +31,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>Create Group</h1></div>
 	</div>
-	<div class="colstack_item">
+	<div class="colstack_item the_form">
 		<form action="/panel/groups/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Name</a></div>
