--- a/templates/panel-word-filters.html
+++ b/templates/panel-word-filters.html
@@ -28,7 +28,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>Add Filter</h1></div>
 	</div>
-	<div class="colstack_item">
+	<div class="colstack_item the_form">
 		<form action="/panel/settings/word-filters/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Find</a></div>
