--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -718,7 +718,7 @@ button.username {
 	top: -2px;
 }
 
-.footer {
+#poweredByHolder {
 	border: 1px solid hsl(0, 0%, 80%);
 	margin-top: 12px;
 	clear: both;
@@ -727,7 +727,7 @@ button.username {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-.footer select {
+#poweredByHolder select {
 	padding: 2px;
 	margin-top: 1px;
 }
